// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="concise-issue-box clearfix"
  onClick={[Function]}
>
  <ButtonPlain
    aria-current={false}
    className="concise-issue-box-message"
    innerRef={[Function]}
    onClick={[Function]}
  >
    <IssueMessageHighlighting
      message="Reduce the number of conditional operators (4) used in the expression"
    />
  </ButtonPlain>
  <div
    className="concise-issue-box-attributes"
  >
    <TypeHelper
      className="display-block little-spacer-right"
      type="BUG"
    />
    <ConciseIssueLocations
      issue={
        {
          "actions": [],
          "component": "main.js",
          "componentEnabled": true,
          "componentLongName": "main.js",
          "componentQualifier": "FIL",
          "componentUuid": "foo1234",
          "creationDate": "2017-03-01T09:36:01+0100",
          "flows": [],
          "flowsWithType": [],
          "key": "AVsae-CQS-9G3txfbFN2",
          "line": 25,
          "message": "Reduce the number of conditional operators (4) used in the expression",
          "project": "myproject",
          "projectKey": "foo",
          "projectName": "Foo",
          "rule": "javascript:S1067",
          "ruleName": "foo",
          "secondaryLocations": [],
          "severity": "MAJOR",
          "status": "OPEN",
          "textRange": {
            "endLine": 26,
            "endOffset": 15,
            "startLine": 25,
            "startOffset": 0,
          },
          "transitions": [],
          "type": "BUG",
        }
      }
      onFlowSelect={[MockFunction]}
      selectedFlowIndex={0}
    />
  </div>
</div>
`;

exports[`should render correctly 2`] = `
<div
  className="concise-issue-box clearfix selected"
>
  <ButtonPlain
    aria-current={true}
    className="concise-issue-box-message"
    innerRef={[Function]}
    onClick={[Function]}
  >
    <IssueMessageHighlighting
      message="Reduce the number of conditional operators (4) used in the expression"
    />
  </ButtonPlain>
  <div
    className="concise-issue-box-attributes"
  >
    <TypeHelper
      className="display-block little-spacer-right"
      type="BUG"
    />
    <ConciseIssueLocations
      issue={
        {
          "actions": [],
          "component": "main.js",
          "componentEnabled": true,
          "componentLongName": "main.js",
          "componentQualifier": "FIL",
          "componentUuid": "foo1234",
          "creationDate": "2017-03-01T09:36:01+0100",
          "flows": [
            [
              {
                "component": "main.js",
                "textRange": {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
              {
                "component": "main.js",
                "textRange": {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
              {
                "component": "main.js",
                "textRange": {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
            ],
            [
              {
                "component": "main.js",
                "textRange": {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
              {
                "component": "main.js",
                "textRange": {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
            ],
          ],
          "flowsWithType": [],
          "key": "AVsae-CQS-9G3txfbFN2",
          "line": 25,
          "message": "Reduce the number of conditional operators (4) used in the expression",
          "project": "myproject",
          "projectKey": "foo",
          "projectName": "Foo",
          "rule": "javascript:S1067",
          "ruleName": "foo",
          "secondaryLocations": [
            {
              "component": "main.js",
              "textRange": {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
            {
              "component": "main.js",
              "textRange": {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
          ],
          "severity": "MAJOR",
          "status": "OPEN",
          "textRange": {
            "endLine": 26,
            "endOffset": 15,
            "startLine": 25,
            "startOffset": 0,
          },
          "transitions": [],
          "type": "BUG",
        }
      }
      onFlowSelect={[MockFunction]}
      selectedFlowIndex={0}
    />
  </div>
  <LocationsList
    componentKey="main.js"
    locations={
      [
        {
          "component": "main.js",
          "textRange": {
            "endLine": 2,
            "endOffset": 2,
            "startLine": 1,
            "startOffset": 1,
          },
        },
        {
          "component": "main.js",
          "textRange": {
            "endLine": 2,
            "endOffset": 2,
            "startLine": 1,
            "startOffset": 1,
          },
        },
      ]
    }
    onLocationSelect={[MockFunction]}
    selectedLocationIndex={0}
  />
</div>
`;
